--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,33 +1,139 @@
+# ============================================
+# PREFIX & BASIC SETTINGS
+# ============================================
 # Use Ctrl+a instead of Ctrl+b (easier to reach)
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# Easier window switching
-bind -n M-Left select-window -t :-
-bind -n M-Right select-window -t :+
+# Performance improvements
+set -g escape-time 10           # Faster command sequences (default is 500ms)
+set -g focus-events on          # Enable focus events for better terminal integration
+set -g history-limit 50000      # Increase scrollback buffer (default is 2000)
+set -g display-time 4000        # Display messages for 4 seconds
+set -g status-interval 5        # Update status bar every 5 seconds (default is 15)
 
+# Better colors and terminal
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"  # True color support
+
+# Enable mouse support
+set -g mouse on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Renumber windows when one is closed
+set -g renumber-windows on
+
+# ============================================
+# KEY BINDINGS
+# ============================================
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
-# Better colors
-set -g default-terminal "screen-256color"
+# Split panes using | and - (more intuitive)
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
 
-# macOS only
-set -g mouse on
+# New window in current path
+bind c new-window -c "#{pane_current_path}"
+
+# Window switching
+bind -n M-Left select-window -t :-
+bind -n M-Right select-window -t :+
+
+# Pane navigation (vim-style)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Pane resizing (vim-style)
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# Quick pane switching with Alt+arrow (no prefix needed)
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# ============================================
+# COPY MODE (VI-STYLE WITH MACOS CLIPBOARD)
+# ============================================
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Enter copy mode with prefix + [
+bind [ copy-mode
+
+# Copy mode vim-style selections
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# Paste with prefix + ]
+bind ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# ============================================
+# MOUSE SUPPORT (MACOS OPTIMIZED)
+# ============================================
+# Smooth scrolling with mouse wheel
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
+
+# Faster scrolling with Ctrl+Wheel
+bind -T copy-mode-vi C-WheelUpPane send-keys -X halfpage-up
+bind -T copy-mode-vi C-WheelDownPane send-keys -X halfpage-down
+bind -T copy-mode-emacs C-WheelUpPane send-keys -X halfpage-up
 bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
-# To copy, left click and drag to highlight text in yellow,
-# once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
-setw -g mode-keys vi
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+# ============================================
+# STATUS BAR
+# ============================================
+# Improved status bar appearance
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour234 fg=colour137 dim'
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+# Window status
+setw -g window-status-current-style 'fg=colour1 bg=colour238 bold'
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-style 'fg=colour9 bg=colour235'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+# Pane borders
+set -g pane-border-style 'fg=colour238 bg=colour235'
+set -g pane-active-border-style 'fg=colour51 bg=colour236'
+
+# Messages
+set -g message-style 'fg=colour232 bg=colour166 bold'
+
+# ============================================
+# QUALITY OF LIFE
+# ============================================
+# Don't detach when killing a session
+set -g detach-on-destroy off
+
+# Aggressive resize (useful for multi-monitor)
+setw -g aggressive-resize on
+
+# Activity monitoring
+setw -g monitor-activity on
+set -g visual-activity off
+
+# Allow terminal scrolling
+set -ga terminal-overrides ',*256col*:smcup@:rmcup@'
